# edx-fullStack

./: .gitignore  README.md  index.html
assets/: index-B5QuYh2q.js  index-BDJ5UjNc.js  index-BkAEoCyZ.js  index-CKCJ9M_T.js  index-CjbdUs_F.js  index-Czn58bpd.js  index-DKU80jCk.css  index-Jse0YLBQ.css  index-pCoUJZnl.css  index-szTYuBFx.js
bookstore-api/: Dockerfile  README.md  data-source.ts  docker-compose.dev.yaml  eslint.config.mjs  package-lock.json  package.json
online_course/: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  urls.py
online_course/courses/: asgi.py  settings.py  urls.py  wsgi.py
online_course/online_course/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
online_course/online_course/migrations/: 0001_initial.py  0002_submission_created_at.py  0003_alter_choice_is_correct_alter_question_grade.py
online_course/online_course/models/: course.py
online_course/online_course/static/online_course/scripts/: online_course.js
online_course/online_course/static/online_course/styles/: online_course.css
online_course/online_course/templates/: courses.html  index.html
online_course/online_course/templates/online_course/: _exam_form.html  base.html  course_details.html  courses.html  exam_result.html  login.html  registration.html
online_course/online_course/views/: course_views.py
online_course/settings/: asgi.py  base.py  dev.py  prod.py  wsgi.py
paradise-nursery-shopping-app/: .env  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  (+1 more)
(+80 files in other folders)
